log/build_2026-01-27_21-43-12/my_picar_driver/stderr.log
  File "/home/ubuntu/picar_ws/install/my_picar_driver/lib/python3.12/site-packages/my_picar_driver/car_driver.py", line 1
    mport rclpy
          ^^^^^
SyntaxError: invalid syntax

